Added support for Checker Framework